--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -44,6 +44,9 @@
             <button onclick="back();">novapag</button>
             <a href="Untitled-1.html">
                 RV</a>
+            
+                <a href="Untitled-2.html">
+                    Ra</a>
         
         </div>
 
