--- a/RaulLinoApp/www/Untitled-1.html
+++ b/RaulLinoApp/www/Untitled-1.html
@@ -15,13 +15,24 @@
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
     >
+    
       <a-text
-        value="This content will always face you."
+        value="Teste"
         look-at="[gps-camera]"
-        scale="120 120 120"
-        gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"
+        scale="50 50 50"
+        gps-entity-place="latitude: position.coords.altitude; longitude: position.coords.longitude;" 
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
+    <a-marker preset="hiro">
+      <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
+      <a-entity
+      position="0 0 0"
+      scale="0.05 0.05 0.05"
+      gltf-model="your-server/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+      ></a-entity>
+  </a-marker>
   </body>
+  
+  
 </html>
