--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -17,24 +17,56 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body onload="descarrega_pagina()">
+<body onload="mudar_pagina('home')">
     <div id="navbar">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" onclick="descarrega_pagina()">Home</a>
+                <a class="nav-link active" aria-current="page" onclick="mudar_pagina('home')">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">Mapa</a>
+                <a class="nav-link" onclick="mudar_pagina('map')">Mapa</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link">RaulLino</a>
+                <a class="nav-link" onclick="mudar_pagina('raullino')">RaulLino</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled">Fotos</a>
+                <a class="nav-link" onclick="mudar_pagina('fotos')">Fotos</a>
             </li>
         </ul>
     </div>
+    <div id="home">
+        <h1>Home</h1>
+    </div>
     <div id="map"></div>
+    <div id="raullino">
+        <center><img style="width:50%; height:50%;margin-top:1%;" src="info_para_o_roteiro/raul-lino.jpg"
+                class="img-fluid" /></center>
+        <br />
+        <div style="text-align: center;" class="container">
+            <h1 class="display-6">
+                Raul Lino da Silva
+            </h1>
+            <br />
+            <br />
+            <p class="lead">Raul Lino da Silva foi uma das grandes figuras da arquitetura lusitana com bastantes obras
+                em Abrantes, das quais a mais conhecida é a Assembleia de Abrantes. Uma personalidade única no que se
+                refere ao panorama das artes em Portugal, muito devido ao facto de ter conseguido articular a tradição
+                portuguesa com as inovadoras correntes europeias do início do século. Também é importante referir que
+                apesar do seu leque de projetos, ele também foi um homem com uma vasta obra teórica ou escrita, o que se
+                tornou muito determinante, para os seus seguidores aos longo de décadas em Portugal.</p>
+            <br />
+            <p class="lead">Ao longo dos seus 70 anos de artista e arquiteto, defendeu a tradição na conceção das
+                formas, afirmando que a arte e a arquitetura são elas também um produto do homem e para os homens, com
+                história, genealogia, características e funcionalidades próprias do espaço e do tempo em que se inserem
+                e da comunidade para que são produzidas. É, assim, um defensor da tradição versus modernismo ou um
+                modernista da tradição.</p>
+            <br />
+            <br />
+            <br />
+            <br />
+        </div>
+
+    </div>
     <div id="pagina">
         <br />
         <br />
@@ -60,6 +92,7 @@
             <br />
         </div>
     </div>
+    <div id="fotos" class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
