Introdução de Página Inicial
Introdução de uma página Home com uma imagem de Abrantes para servir de introdução à aplicação.

--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -35,7 +35,18 @@
         </ul>
     </div>
     <div id="home">
-        <h1>Home</h1>
+        <div>
+            <img style="width:100%;" src="www\abrantes.jpg" class="img-fluid" />
+            <div class="centered">
+                <h1 class="display-1">Raul Lino da Silva</h1>
+                <h1 class="display-6">Conservador e revolucionário, ousado e tradicionalista, mas acima de tudo um dos
+                    mais geniais arquitetos portugueses</h1>
+                <!--<button type="button" class="btn btn-outline-dark btn-lg">Vem
+                    conhecer</button>-->
+                <center><button style="text-align: center;" type="button" class="btn btn-dark btn-lg">Vem
+                        conhecer</button></center>
+            </div>
+        </div>
     </div>
     <div id="map"></div>
     <div id="raullino">
