Atualizações Gerais e Tentativas
- atualização de alguns pormenores no android
- tentativa de colocação de imagens no android

--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -38,7 +38,7 @@
     <div id="map"></div>
     <div id="home">
         <div>
-            <img style="width:100%;" src="www\abrantes.jpg" class="img-fluid" />
+            <div id="imagem_fundo"></div>
             <div class="centered">
                 <h1 class="display-1">Raul Lino da Silva</h1>
                 <h1 class="display-6">Conservador e revolucionário, ousado e tradicionalista, mas acima de tudo um dos
