--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="raullino">
-        <center><img style="width:50%; height:50%;margin-top:1%;" src="info_para_o_roteiro/raul-lino.jpg"
+        <center><img style="width:50%; height:50%;margin-top:1%;" src="img/roteiro/raul-lino.jpg"
                 class="img-fluid" /></center>
         <br />
         <div style="text-align: center;" class="container">
