--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div id="raullino">
+    <div id="raullino" style="background: #f8f9fa;">
         <center><img style="width:50%; height:50%;margin-top:1%;" src="img/roteiro/raul-lino.jpg" class="img-fluid" />
         </center>
         <br />
