--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -63,14 +63,14 @@
             </h1>
             <br />
             <br />
-            <p class="lead">Raul Lino da Silva foi uma das grandes figuras da arquitetura lusitana com bastantes obras
+            <p class="lead" style="text-align: justify">Raul Lino da Silva foi uma das grandes figuras da arquitetura lusitana com bastantes obras
                 em Abrantes, das quais a mais conhecida é a Assembleia de Abrantes. Uma personalidade única no que se
                 refere ao panorama das artes em Portugal, muito devido ao facto de ter conseguido articular a tradição
                 portuguesa com as inovadoras correntes europeias do início do século. Também é importante referir que
                 apesar do seu leque de projetos, ele também foi um homem com uma vasta obra teórica ou escrita, o que se
                 tornou muito determinante, para os seus seguidores aos longo de décadas em Portugal.</p>
             <br />
-            <p class="lead">Ao longo dos seus 70 anos de artista e arquiteto, defendeu a tradição na conceção das
+            <p class="lead" style="text-align: justify">Ao longo dos seus 70 anos de artista e arquiteto, defendeu a tradição na conceção das
                 formas, afirmando que a arte e a arquitetura são elas também um produto do homem e para os homens, com
                 história, genealogia, características e funcionalidades próprias do espaço e do tempo em que se inserem
                 e da comunidade para que são produzidas. É, assim, um defensor da tradição versus modernismo ou um
@@ -138,9 +138,9 @@
                     </figure>
                 </div>
             </div>
-            <p style="text-align: left;">Este projeto foi desenvolvido no âmbito da Unidade Curricular de Projeto Final da licenciatura em Engenharia Informática, ano letivo 2021/2022, na Escola Superior de Tecnologia de Tomar do Instituto Politécnico de Tomar. Juntamente com a equipa do Tech&Art e os coordenadores do IPT. </p>
-            <p style="text-align: left;">O projeto apresentado precisava identificar, localizar, analisar, interpretar e sistematizar os projetos de arquitetura de Raul Lino que foram construídos no concelho de Abrantes, contribuindo para aprofundar o conhecimento da sua obra.</p>
-            <p style="text-align: left;">Paralelamente, pretendia-se que esse conhecimento fosse acessível ao público, através do desenvolvimento de produtos que envolvessem reduzidos efeitos nocivos ao meio ambiente, e cujo funcionamento fosse compatível com dispositivos móveis amplamente utilizados na sociedade atual, permitindo um fácil acesso à informação, a qualquer hora e em qualquer lugar.</p>
+            <p style="text-align: justify;">Este projeto foi desenvolvido no âmbito da Unidade Curricular de Projeto Final da licenciatura em Engenharia Informática, ano letivo 2021/2022, na Escola Superior de Tecnologia de Tomar do Instituto Politécnico de Tomar. Juntamente com a equipa do Tech&Art e os coordenadores do IPT. </p>
+            <p style="text-align: justify;">O projeto apresentado identifica, localiza, analisa, interpreta e sistematiza os projetos de arquitetura de Raul Lino que foram construídos no concelho de Abrantes, contribuindo para aprofundar o conhecimento da sua obra.</p>
+            <p style="text-align: justify;">Esse mesmo conhecimento é, assim, acessível ao público, através do desenvolvimento deste produto que envolve reduzidos efeitos nocivos ao meio ambiente, e cujo funcionamento é compatível com dispositivos móveis amplamente utilizados na sociedade atual, permitindo um fácil acesso à informação, a qualquer hora e em qualquer lugar.</p>
             <img src="ipt_pred.jpg" class="img-fluid" alt="ipt_pred.jpg">
             <br />
         </div>
