--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -12,17 +12,21 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/leaflet.css">
     <link rel="icon" href="img/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>RaulLinoApp</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body onload="mudar_pagina('home')">
     <div id="navbar">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link active" aria-current="page"
-                    onclick="mudar_pagina('home')">Home</a>
+                <a style="cursor:pointer;" class="nav-link active" href="#" aria-current="page"
+                    onclick="mudar_pagina('home')"><i class="fa fa-fw fa-home"></i>Home</a>
+                <icon src="www/img/home.svg" density="ldpi"/>
+                <icon src="www/img/home.svg" density="mdpi"/>
+                <icon src="www/img/home.svg" density="hdpi"/>
+                <icon src="www/img/home.svg" density="xhdpi"/>
             </li>
             <li class="nav-item">
                 <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('about')">Sobre</a>
@@ -138,7 +142,7 @@
                     </figure>
                 </div>
             </div>
-            <p style="text-align: justify;">Este projeto foi desenvolvido no âmbito da Unidade Curricular de Projeto Final da licenciatura em Engenharia Informática, ano letivo 2021/2022, na Escola Superior de Tecnologia de Tomar do Instituto Politécnico de Tomar. Juntamente com a equipa do Tech&Art e os coordenadores do IPT. </p>
+            <p style="text-align: justify;">Este projeto foi desenvolvido no âmbito da Unidade Curricular de Projeto Final da licenciatura em Engenharia Informática, ano letivo 2021/2022, na Escola Superior de Tecnologia de Tomar do Instituto Politécnico de Tomar. Juntamente com a equipa do Techn&Art e os coordenador do IPT, o professor Paulo Santos.</p>
             <p style="text-align: justify;">O projeto apresentado identifica, localiza, analisa, interpreta e sistematiza os projetos de arquitetura de Raul Lino que foram construídos no concelho de Abrantes, contribuindo para aprofundar o conhecimento da sua obra.</p>
             <p style="text-align: justify;">Esse mesmo conhecimento é, assim, acessível ao público, através do desenvolvimento deste produto que envolve reduzidos efeitos nocivos ao meio ambiente, e cujo funcionamento é compatível com dispositivos móveis amplamente utilizados na sociedade atual, permitindo um fácil acesso à informação, a qualquer hora e em qualquer lugar.</p>
             <img src="ipt_pred.jpg" class="img-fluid" alt="ipt_pred.jpg">
