--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -18,27 +18,27 @@
 </head>
 
 <body onload="mudar_pagina('home')">
-    <div id="navbar">
+    <div id="navbar ">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link active" href="#" aria-current="page"
-                    onclick="mudar_pagina('home')"><i class="fa fa-fw fa-home"></i>Home</a>
-                <icon src="www/img/home.svg" density="ldpi"/>
-                <icon src="www/img/home.svg" density="mdpi"/>
-                <icon src="www/img/home.svg" density="hdpi"/>
-                <icon src="www/img/home.svg" density="xhdpi"/>
+                <a style="cursor:pointer;" class="nav-link active" aria-current="page"
+                    onclick="mudar_pagina('home')"><img src = "img/home.svg" style="height:30px; width: 30px"/>Home</a>
             </li>
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('about')">Sobre</a>
+                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('about')">
+                    <img src = "img/pontoverde.svg" style="height:35px; width: 35px"/>Sobre</a>
             </li>
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('map')">Mapa</a>
+                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('map')">
+                    <img src = "img/mapa.svg" style="height:30px; width: 30px"/>Mapa</a>
             </li>
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('raullino')">RaulLino</a>
+                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('raullino')">
+                    <img src = "img/notabiografica.svg" style="height:30px; width: 30px"/>RaulLino</a>
             </li>
             <li class="nav-item">
-                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('fotos')">Fotos</a>
+                <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('fotos')">
+                    <img src = "img/mais.svg" style="height:35px; width: 35px"/>Fotos</a>
             </li>
 
         </ul>
@@ -48,9 +48,8 @@
         <div>
             <div id="imagem_fundo"></div>
             <div class="centered">
-                <h1 class="display-1">Raul Lino da Silva</h1>
-                <h1 class="display-6">Conservador e revolucionário, ousado e tradicionalista, mas acima de tudo um dos
-                    mais geniais arquitetos portugueses</h1>
+                <h1 class="display-1" style="padding: 10px; border: 2px solid rgb(117, 116, 116); background-color: rgba(100, 100, 100, 0.3);">Raul Lino da Silva</h1>
+                <h1 class="display-6" style="padding: 10px; border: 2px solid rgb(117, 116, 116); background-color: rgba(100, 100, 100, 0.3);">Um Itinerário pelo Património</h1>
                 <center><button style="text-align: center; margin-right: 4%;" type="button" class="btn btn-dark btn-lg"
                         onclick="mudar_pagina('map')">Vem conhecer</button></center>
             </div>
