--- a/RaulLinoApp/www/index.html
+++ b/RaulLinoApp/www/index.html
@@ -40,6 +40,8 @@
                 <a style="cursor:pointer;" class="nav-link" onclick="mudar_pagina('fotos')">
                     <img src = "img/mais.svg" style="height:35px; width: 35px"/>Fotos</a>
             </li>
+            
+           
 
         </ul>
     </div>
@@ -48,10 +50,19 @@
         <div>
             <div id="imagem_fundo"></div>
             <div class="centered">
-                <h1 class="display-1" style="padding: 10px; border: 2px solid rgb(117, 116, 116); background-color: rgba(100, 100, 100, 0.3);">Raul Lino da Silva</h1>
-                <h1 class="display-6" style="padding: 10px; border: 2px solid rgb(117, 116, 116); background-color: rgba(100, 100, 100, 0.3);">Um Itinerário pelo Património</h1>
-                <center><button style="text-align: center; margin-right: 4%;" type="button" class="btn btn-dark btn-lg"
-                        onclick="mudar_pagina('map')">Vem conhecer</button></center>
+                <center>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <button style="text-align: center; margin-right: 4%; " type="button" class="btn btn-dark btn-lg"
+                        onclick="mudar_pagina('map')">Explorar</button>
+                </center>
             </div>
         </div>
     </div>
